--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@chakra-ui/react": "^2.7.1",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "@headlessui/react": "^1.7.15",
         "@tiptap/extension-code-block-lowlight": "^2.0.3",
         "@tiptap/extension-color": "^2.0.3",
@@ -27,6 +30,7 @@
         "easymde": "^2.18.0",
         "eslint": "8.41.0",
         "eslint-config-next": "13.4.4",
+        "framer-motion": "^10.12.18",
         "googlebard": "^1.0.6",
         "highlight.js": "^11.8.0",
         "lowlight": "^2.9.0",
